force-app/main/default/objects/BObject__c/BObject__c.object-meta.xml
<CustomObject>
    <label>BObject</label>
    <nameField>
        <label>BObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BObjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>