force-app/main/default/objects/BObject__c/fields/ABMD__c.field-meta.xml
<CustomField>
    <fullName>ABMD__c</fullName>
    <label>ABMD</label>
    <referenceTo>AObject__c</referenceTo>
    <relationshipLabel>ABRelList</relationshipLabel>
    <relationshipName>BObjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>