force-app/main/default/objects/BObject__c/fields/FField__c.field-meta.xml
<CustomField>
    <fullName>FField__c</fullName>
    <formula>IField__c + 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FField</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>