force-app/main/default/objects/BObject__c/fields/IField__c.field-meta.xml
<CustomField>
    <fullName>IField__c</fullName>
    <label>IField</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>